<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#32CD32"
    tools:context=".ScoresActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/ic_square_top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_square_bottom" />

    <RelativeLayout
        android:id="@+id/scoresLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/scoresImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_scores"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scoresImage"
            android:gravity="center"
            android:text="@string/score"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/finalScoreIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoresLogo"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/final_exam"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/finalScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/basicsScoreIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finalScoreIndicator"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/basics_exam"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/basicsScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/methodsScoreIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/basicsScoreIndicator"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/methods_exam"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/methodsScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/classesScoreIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/methodsScoreIndicator"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/classes_exam"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/classesScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileHandlingScoreIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/classesScoreIndicator"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:text="@string/file_handling_exam"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/fileHandlingScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="italic"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</RelativeLayout>